# scratch

./: .gitignore  flake.nix
JavaScratch/: settings.gradle.kts
JavaScratch/gradle/wrapper/: gradle-wrapper.properties
python/: pyproject.toml
rust/src/: main.rs
typescript/: package.json  pnpm-lock.yaml
typescript/src/: index.ts  server.ts
